--- a/index.html
+++ b/index.html
@@ -3,7 +3,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RE-post - Simplify Your Social Media Management</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Header Section -->
+    <header class="header">
+      <div class="logo">RE-post</div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Simplify Your Social Media Management</h1>
+        <p>
+          Automate your posts across LinkedIn, Facebook, and Instagram with just
+          one click.
+        </p>
+        <a href="#" class="btn-primary">Get Started</a>
+        <a href="#" class="btn-secondary">Learn More</a>
+      </div>
+    </section>
+
+    <!-- Features Section -->
+    <section class="features">
+      <div class="feature">
+        <i class="icon connectivity-icon"></i>
+        <h3>Multi-Platform Posting</h3>
+        <p>Post to LinkedIn, Facebook, and Instagram simultaneously.</p>
+      </div>
+      <div class="feature">
+        <i class="icon calendar-icon"></i>
+        <h3>Schedule Posts</h3>
+        <p>Plan your posts ahead of time and schedule them for later.</p>
+      </div>
+      <div class="feature">
+        <i class="icon graph-icon"></i>
+        <h3>Analytics & Insights</h3>
+        <p>Track your performance across all platforms.</p>
+      </div>
+    </section>
+
+    <!-- Text Box Area -->
+    <section class="text-box-section">
+      <div class="text-box-container">
+        <div class="toolbar">
+          <button class="toolbar-btn bold-btn">B</button>
+          <button class="toolbar-btn italic-btn">I</button>
+          <button class="toolbar-btn underline-btn">U</button>
+          <button class="toolbar-btn emoji-btn">😊</button>
+        </div>
+        <textarea
+          class="text-box"
+          placeholder="Type your post here..."
+        ></textarea>
+        <div class="character-count">0/2000 characters</div>
+        <div class="media-upload">
+          <label for="file-upload" class="file-upload-label"
+            >Drag and drop media files or click to upload</label
+          >
+          <input type="file" id="file-upload" class="file-upload-input" />
+        </div>
+        <button class="btn-primary submit-btn">Post</button>
+      </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+      <div class="footer-content">
+        <p>&copy; 2024 RE-post. All rights reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
